# odevler

AGARCLONE/: installer.py  main.py
Ödev_1/: TEKNIK_DOKUMAN.md
Ödev_2/DersNotlarındanOtomatikNotCıkarma/: ders_notu_formu.html  ders_notu_workflow.json
Ödev_2/PasswordHashingVeBruteForceTestAracı/: CMakeLists.txt
Ödev_2/PasswordHashingVeBruteForceTestAracı/include/: BenchmarkManager.h  BruteForceSimulator.h  DictionaryAttackSimulator.h  HashAlgorithm.h  Logger.h  MD5Hash.h  MenuSystem.h  PasswordAnalyzer.h  ReportGenerator.h  SHA1Hash.h  SHA256Hash.h  SaltDemonstration.h
Ödev_2/PasswordHashingVeBruteForceTestAracı/src/: BenchmarkManager.cpp  BruteForceSimulator.cpp  DictionaryAttackSimulator.cpp  HashAlgorithm.cpp  Logger.cpp  MD5Hash.cpp  MenuSystem.cpp  PasswordAnalyzer.cpp  ReportGenerator.cpp  SHA1Hash.cpp  SHA256Hash.cpp  SaltDemonstration.cpp  main.cpp
